cmake_minimum_required(VERSION 3.10)
project(cJSON)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)
include_directories(tests)
include_directories(tests/unity/examples)
include_directories(tests/unity/examples/example_1/src)
include_directories(tests/unity/examples/example_2/src)
include_directories(tests/unity/examples/example_3/helper)
include_directories(tests/unity/examples/example_3/src)
include_directories(tests/unity/extras/fixture/src)
include_directories(tests/unity/extras/fixture/test)
include_directories(tests/unity/src)
include_directories(tests/unity/test/expectdata)
include_directories(tests/unity/test/testdata)

add_executable(cJSON
        fuzzing/inputs/test1
        fuzzing/inputs/test10
        fuzzing/inputs/test11
        fuzzing/inputs/test2
        fuzzing/inputs/test3
        fuzzing/inputs/test3.bu
        fuzzing/inputs/test3.uf
        fuzzing/inputs/test3.uu
        fuzzing/inputs/test4
        fuzzing/inputs/test5
        fuzzing/inputs/test6
        fuzzing/inputs/test7
        fuzzing/inputs/test8
        fuzzing/inputs/test9
        fuzzing/afl-prepare-linux.sh
        fuzzing/afl.c
        fuzzing/afl.sh
        fuzzing/CMakeLists.txt
        fuzzing/json.dict
        tests/inputs/test1
        tests/inputs/test1.expected
        tests/inputs/test10
        tests/inputs/test10.expected
        tests/inputs/test11
        tests/inputs/test11.expected
        tests/inputs/test2
        tests/inputs/test2.expected
        tests/inputs/test3
        tests/inputs/test3.expected
        tests/inputs/test4
        tests/inputs/test4.expected
        tests/inputs/test5
        tests/inputs/test5.expected
        tests/inputs/test6
        tests/inputs/test7
        tests/inputs/test7.expected
        tests/inputs/test8
        tests/inputs/test8.expected
        tests/inputs/test9
        tests/inputs/test9.expected
        tests/json-patch-tests/cjson-utils-tests.json
        tests/json-patch-tests/package.json
        tests/json-patch-tests/README.md
        tests/json-patch-tests/spec_tests.json
        tests/json-patch-tests/tests.json
        tests/unity/examples/example_1/src/ProductionCode.c
        tests/unity/examples/example_1/src/ProductionCode.h
        tests/unity/examples/example_1/src/ProductionCode2.c
        tests/unity/examples/example_1/src/ProductionCode2.h
        tests/unity/examples/example_1/test/test_runners/TestProductionCode2_Runner.c
        tests/unity/examples/example_1/test/test_runners/TestProductionCode_Runner.c
        tests/unity/examples/example_1/test/TestProductionCode.c
        tests/unity/examples/example_1/test/TestProductionCode2.c
        tests/unity/examples/example_2/src/ProductionCode.c
        tests/unity/examples/example_2/src/ProductionCode.h
        tests/unity/examples/example_2/src/ProductionCode2.c
        tests/unity/examples/example_2/src/ProductionCode2.h
        tests/unity/examples/example_2/test/test_runners/all_tests.c
        tests/unity/examples/example_2/test/test_runners/TestProductionCode2_Runner.c
        tests/unity/examples/example_2/test/test_runners/TestProductionCode_Runner.c
        tests/unity/examples/example_2/test/TestProductionCode.c
        tests/unity/examples/example_2/test/TestProductionCode2.c
        tests/unity/examples/example_3/helper/UnityHelper.c
        tests/unity/examples/example_3/helper/UnityHelper.h
        tests/unity/examples/example_3/src/ProductionCode.c
        tests/unity/examples/example_3/src/ProductionCode.h
        tests/unity/examples/example_3/src/ProductionCode2.c
        tests/unity/examples/example_3/src/ProductionCode2.h
        tests/unity/examples/example_3/test/TestProductionCode.c
        tests/unity/examples/example_3/test/TestProductionCode2.c
        tests/unity/examples/unity_config.h
        tests/unity/extras/fixture/src/unity_fixture.c
        tests/unity/extras/fixture/src/unity_fixture.h
        tests/unity/extras/fixture/src/unity_fixture_internals.h
        tests/unity/extras/fixture/src/unity_fixture_malloc_overrides.h
        tests/unity/extras/fixture/test/main/AllTests.c
        tests/unity/extras/fixture/test/template_fixture_tests.c
        tests/unity/extras/fixture/test/unity_fixture_Test.c
        tests/unity/extras/fixture/test/unity_fixture_TestRunner.c
        tests/unity/extras/fixture/test/unity_output_Spy.c
        tests/unity/extras/fixture/test/unity_output_Spy.h
        tests/unity/src/unity.c
        tests/unity/src/unity.h
        tests/unity/src/unity_internals.h
        tests/unity/test/expectdata/testsample_cmd.c
        tests/unity/test/expectdata/testsample_def.c
        tests/unity/test/expectdata/testsample_head1.c
        tests/unity/test/expectdata/testsample_head1.h
        tests/unity/test/expectdata/testsample_mock_cmd.c
        tests/unity/test/expectdata/testsample_mock_def.c
        tests/unity/test/expectdata/testsample_mock_head1.c
        tests/unity/test/expectdata/testsample_mock_head1.h
        tests/unity/test/expectdata/testsample_mock_new1.c
        tests/unity/test/expectdata/testsample_mock_new2.c
        tests/unity/test/expectdata/testsample_mock_param.c
        tests/unity/test/expectdata/testsample_mock_run1.c
        tests/unity/test/expectdata/testsample_mock_run2.c
        tests/unity/test/expectdata/testsample_mock_yaml.c
        tests/unity/test/expectdata/testsample_new1.c
        tests/unity/test/expectdata/testsample_new2.c
        tests/unity/test/expectdata/testsample_param.c
        tests/unity/test/expectdata/testsample_run1.c
        tests/unity/test/expectdata/testsample_run2.c
        tests/unity/test/expectdata/testsample_yaml.c
        tests/unity/test/testdata/CException.h
        tests/unity/test/testdata/cmock.h
        tests/unity/test/testdata/Defs.h
        tests/unity/test/testdata/mockMock.h
        tests/unity/test/testdata/testRunnerGenerator.c
        tests/unity/test/testdata/testRunnerGeneratorSmall.c
        tests/unity/test/testdata/testRunnerGeneratorWithMocks.c
        tests/unity/test/tests/testparameterized.c
        tests/unity/test/tests/testunity.c
        tests/cjson_add.c
        tests/common.h
        tests/compare_tests.c
        tests/json_patch_tests.c
        tests/misc_tests.c
        tests/misc_utils_tests.c
        tests/old_utils_tests.c
        tests/parse_array.c
        tests/parse_examples.c
        tests/parse_hex4.c
        tests/parse_number.c
        tests/parse_object.c
        tests/parse_string.c
        tests/parse_value.c
        tests/parse_with_opts.c
        tests/print_array.c
        tests/print_number.c
        tests/print_object.c
        tests/print_string.c
        tests/print_value.c
        tests/readme_examples.c
        cJSON.c
        cJSON.h
        cJSON_Utils.c
        cJSON_Utils.h
        CMakeLists.txt
        CONTRIBUTORS.md
        LICENSE
        Makefile
        README.md
        test.c
        valgrind.supp)
